// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCard renders correct snapshot 1`] = `
<withStyles(GridWrapper)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="DescribeElementCard-shadedCard-2"
    raised={false}
    square={true}
  >
    <div
      className="DescribeElementCard-cardContent-3"
    >
      <withStyles(DescribeElementCardBanner)
        icon="people"
        title="expectedTitle"
      />
      <withStyles(DescribeElementCardBody)
        content="expectedContent"
      />
    </div>
  </Card>
</withStyles(GridWrapper)>
`;

exports[`DescribeElementCard renders correct snapshot with switches 1`] = `
<withStyles(GridWrapper)
  item={true}
  md={4}
  sm={6}
  xs={12}
>
  <Card
    className="DescribeElementCard-card-1"
    raised={false}
    square={true}
  >
    <div
      className="DescribeElementCard-cardContent-3"
    >
      <withStyles(DescribeElementCardBody)
        content="moreContent"
        media={true}
        quote={true}
      />
      <withStyles(DescribeElementCardBanner)
        quote={true}
        title="expectedTitle"
      />
      <DescribeElementCardLinks
        links={
          Array [
            Object {
              "displayName": "displayName",
              "href": "address",
            },
          ]
        }
      />
    </div>
  </Card>
</withStyles(GridWrapper)>
`;
